# industrial-ai-platform

./: .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: routes_health.py
data/: .gitignore  README.md
data/samples/: README.md  example_manifest.csv
docs/: architecture.md  decisions.md  plano_28_dias_industrial_ai_platform.md
pipelines/spark/: preprocess_images.py
scripts/: download_severstal.sh  validate_images.py  visualize_mask.py
tests/: test_health.py  test_manifest_smoke.py
